Added style for hero

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body
 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display: flex;
     flex-direction: column;
     vertical-align: center;
@@ -18,7 +19,7 @@ body
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 8px;
+    padding: 10px;
 }
 
 a
@@ -48,13 +49,29 @@ button
     border: none;
     padding: 10px 40px;
     color: white;
+    font-weight: 600;
+    
 }
+
+.hero-img img
+{
+    border-radius: 12px;
+}
+
 
 h1
 {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+}
+
+h2
+{
+    text-align: center;
+    font-size: 32px;
+    font-weight: 900;
+    color: #1F2937  ;
 }
 
 .header-content p
@@ -74,7 +91,64 @@ h1
     justify-content: space-evenly;
     align-items: center;
     padding: 40px;
+    padding-bottom: 100px;
     margin: 0 auto;
 
 }
+
+.content
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+figure
+{
+    width: 150px;
+}
+
+figure img
+{
+    width: 150px;
+    height: 100px;
+    text-align: center;
+    border-radius: 12px;
+    border:3px solid #3882F6;
+}
+
+figure figcaption
+{
+    text-align: center;
+}
+
+blockquote
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    padding-left: 370px;
+    padding-right: 370px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin: 50px 0 0 auto;
+    border: 5px solid red;
+}
+
+blockquote q
+{
+    font-style: italic;
+    font-size: 36px;
+    color: #1F2937;
+}
+
+footer
+{
+    display: inline;
+    float: right;
+}
+
 
