--- a/style.css
+++ b/style.css
@@ -123,32 +123,81 @@ figure figcaption
     text-align: center;
 }
 
-blockquote
+.sect-head
 {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.quote
+{
+    width: 80%;
     background-color: #E5E7EB;
     padding-left: 370px;
     padding-right: 370px;
     padding-top: 50px;
     padding-bottom: 50px;
     margin: 50px 0 0 auto;
-    border: 5px solid red;
+    
 }
 
-blockquote q
+.quote q
 {
     font-style: italic;
     font-size: 36px;
     color: #1F2937;
 }
 
-footer
+.quote p
 {
-    display: inline;
-    float: right;
+    width: 97%;
+    text-align: right;
 }
 
+.footer
+{
+    background-color: #1F2937;
+    padding: 0;
+    color: white;
+    text-align: center;
 
+}
+
+.cta-head
+{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 40px;
+    padding-bottom: 50px;
+    margin: 0;
+}
+
+.cta
+{
+    display: flex;
+    justify-content: space-between;
+    background-color: #3882F6;
+    padding: 15px 15px 15px 15px;
+    border-radius: 12px;
+    color: white;
+    width: 65%;
+}
+
+.cta button
+{
+    border: 2px solid white;
+}
+
+.cta-attr
+{
+    width: 800px;
+}
+
+.cta-btn
+{
+    display:flex;
+    justify-content: space-between;
+    padding-top: 0 auto;
+}
