--- a/style.css
+++ b/style.css
@@ -163,41 +163,41 @@ figure figcaption
     text-align: center;
 
 }
-
 .cta-head
 {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 40px;
-    padding-bottom: 50px;
-    margin: 0;
+    padding: 50px;
+    justify-content: center;
+    
 }
-
 .cta
 {
     display: flex;
-    justify-content: space-between;
     background-color: #3882F6;
-    padding: 15px 15px 15px 15px;
     border-radius: 12px;
-    color: white;
-    width: 65%;
+    padding: 60px;
+    width: 60%;
+    justify-content: space-between;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
 }
-
-.cta button
-{
-    border: 2px solid white;
-}
-
 .cta-attr
 {
-    width: 800px;
+    display: flex;
+    color: white;
+    padding-top: 0;
+    padding-left: 0;
+    flex-direction: column;
 }
-
-.cta-btn
+.sign-btn
 {
-    display:flex;
-    justify-content: space-between;
-    padding-top: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid white;
+    height: 30%;
+    margin-right: 150px;
+    margin-top: 60px;
 }
